changed to dark mode + fixed saving links

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -22,10 +22,11 @@ body {
 
 	min-height: 100vh;
 	width: 100%;
+	color: general.$font-color;
+	background-color: general.$background-color;
 
 	line-height: 1;
 	font-weight: 500;
-	color: #555;
 }
 
 .material-symbols-rounded {
