--- a/src/assets/styles/_general.scss
+++ b/src/assets/styles/_general.scss
@@ -1,9 +1,18 @@
 // Colors
-$primary-color: rgb(255, 135, 135);
-$primary-color-dim: rgb(248, 196, 180);
-$secondary-color: rgb(188, 226, 158);
-$secondary-color-dim: rgb(229, 235, 178);
-$error-color: #ed4337;
+// $primary-color: rgb(255, 135, 135);
+// $primary-color-dim: rgb(248, 196, 180);
+// $secondary-color: rgb(188, 226, 158);
+// $secondary-color-dim: rgb(229, 235, 178);
+// $error-color: #ed4337;
+
+$primary-color: #eee82c;
+$secondary-color: #598b2c;
+$background-color: #121212;
+$font-color: #eeeeee;
+$error-color: #af1b3f;
+
+$primary-color-dim: ṛgba($primary-color, 0.3);
+$secondary-color-dim: ṛgba($secondary-color, 0.3);
 
 // fonts
 $serif-font: "Source Serif Pro", serif;
